fix overflows and font-family

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -22,6 +22,7 @@ $font-code: Menlo, Consolas, monospace;
 * {
   margin: 0;
   padding: 0;
+  font-size: 1em;
 }
 
 *,
@@ -39,7 +40,12 @@ html,
 body {
   height: 100%;
   overflow-x: hidden;
+}
 
+textarea {
+  font-family: $font-code;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 input,
@@ -114,7 +120,7 @@ button {
   resize: none;
   box-shadow: none;
   border-radius: 0;
-  padding: 7em 1.5em 1.5em;
+  padding: 1em 1em 4em;
   background: $color-darkest;
   color: $color-lightest;
 }
@@ -123,6 +129,8 @@ button {
   padding: 1.5em;
   width: 100%;
   height: 100%;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 .statusbar {
